--- a/iSH.xcconfig
+++ b/iSH.xcconfig
@@ -1,7 +1,7 @@
 // Change this to change all the bundle IDs and app groups
-ROOT_BUNDLE_IDENTIFIER = app.ish.iSH
+ROOT_KHUNGZAA_IDENTIFIER = app.ish.iSH
 
 // Choose logging channels to enable. Separate by spaces. Try "verbose strace".
 ISH_LOG =
 
-PRODUCT_APP_GROUP_IDENTIFIER = group.$(ROOT_BUNDLE_IDENTIFIER)
+PRODUCT_APP_GROUP_IDENTIFIER = group.$(ROOT_KHUNGZAA_IDENTIFIER)
