Improve Xcode project
* Fix a number of platform and deployment target mistakes
* Sync Xcode's idea of files that exist with what's on disk
* Make a dummy target with all the files so Xcode can index their code
* Add a macOS CLI tool to test iSH. Marginally useful in and of itself,
but it keeps the build system from having broken things in it

--- a/iSH.xcconfig
+++ b/iSH.xcconfig
@@ -3,6 +3,10 @@ ROOT_BUNDLE_IDENTIFIER = app.ish.iSH
 
 // Choose logging channels to enable. Separate by spaces. Try "verbose strace".
 ISH_LOG =
+ISH_LOGGER = $(ISH_LOGGER_$(PLATFORM_NAME))
+ISH_LOGGER_iphoneos = nslog
+ISH_LOGGER_iphonesimulator = nslog
+ISH_LOGGER_macosx = dprintf
 
 ROOTFS_URL = github.com/ish-app/roots/releases/download/g9ce02ec1eddbf4beee99c6aeca3c99bd4f8b5943/appstore.tar.gz
 
