--- a/iSH.xcconfig
+++ b/iSH.xcconfig
@@ -8,6 +8,7 @@ ISH_LOGGER_iphoneos = nslog
 ISH_LOGGER_iphonesimulator = nslog
 ISH_LOGGER_macosx = dprintf
 
-ROOTFS_URL = github.com/ish-app/roots/releases/download/g9ce02ec1eddbf4beee99c6aeca3c99bd4f8b5943/appstore.tar.gz
+ROOTFS_URL = github.com/ish-app/roots/releases/download/g89bf0c2c93abd3080f6909041f9c659cf076f2fd/appstore-odrs.tar.gz
+ENABLE_APK_ODRS = NO
 
 PRODUCT_APP_GROUP_IDENTIFIER = group.$(ROOT_BUNDLE_IDENTIFIER)
