Use a more normal rootfs if ODRs are disabled

--- a/iSH.xcconfig
+++ b/iSH.xcconfig
@@ -8,7 +8,9 @@ ISH_LOGGER_iphoneos = nslog
 ISH_LOGGER_iphonesimulator = nslog
 ISH_LOGGER_macosx = dprintf
 
-ROOTFS_URL = github.com/ish-app/roots/releases/download/g89bf0c2c93abd3080f6909041f9c659cf076f2fd/appstore-odrs.tar.gz
 ENABLE_APK_ODRS = NO
+ROOTFS_URL = $(ROOTFS_URL_IF_ODRS_$(ENABLE_APK_ODRS))
+ROOTFS_URL_IF_ODRS_YES = github.com/ish-app/roots/releases/download/g89bf0c2c93abd3080f6909041f9c659cf076f2fd/appstore-odrs.tar.gz
+ROOTFS_URL_IF_ODRS_NO = github.com/ish-app/roots/releases/download/g9ce02ec1eddbf4beee99c6aeca3c99bd4f8b5943/appstore.tar.gz
 
 PRODUCT_APP_GROUP_IDENTIFIER = group.$(ROOT_BUNDLE_IDENTIFIER)
