--- a/app/UITests/Info.plist
+++ b/app/UITests/Info.plist
@@ -15,8 +15,8 @@
 	<key>CFBundlePackageType</key>
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.1</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleVersion</key>
-	<string>85</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 </dict>
 </plist>
