--- a/.github/workflows/update-alpine-repo.yml
+++ b/.github/workflows/update-alpine-repo.yml
@@ -9,15 +9,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Update main
-        run: deps/aports/sync-archive.sh v3.12 main/x86
-      - name: Update community
-        run: deps/aports/sync-archive.sh v3.12 community/x86
+      - name: Setup dependencies
+        run: |
+            sudo apt-get install rclone
+            mkdir -p ~/.config/rclone
+            echo "$RCLONE_CONFIG" > ~/.config/rclone/rclone.conf
+        env:
+            RCLONE_CONFIG: ${{ secrets.RCLONE_CONFIG }}
+      - name: Update
+        run: |
+            deps/aports/sync-archive.sh v3.12 main/x86
+            deps/aports/sync-archive.sh v3.12 community/x86
       - name: Commit
         id: commit
         run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
           git add deps/aports/{main,community}/x86/index.txt
-          git commit -m"Update Alpine repositories"
+          git commit -m "Update Alpine repositories"
           # TODO add a summary of changes in the commit description
         continue-on-error: true
       - name: Push
