Make sure a new changelog is written for each build
Every. Single. Time. I forget to write a changelog and the old one is
used. No longer.

--- a/.github/workflows/upload-build.yml
+++ b/.github/workflows/upload-build.yml
@@ -48,3 +48,10 @@ jobs:
         with:
           name: Fastlane Logs
           path: fastlane.log
+
+      - name: Delete changelog
+        run:
+          git rm fastlane/changelog.txt
+          git commit -m "Make sure a new changelog is written for the next build"
+          git push
+
