--- a/iSH-AOK.xcodeproj/xcshareddata/xcschemes/iSH.xcscheme
+++ b/iSH-AOK.xcodeproj/xcshareddata/xcschemes/iSH.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1220"
-   version = "2.1">
+   LastUpgradeVersion = "1230"
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -9,26 +9,16 @@
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BB41591B255EF9E300E0950C"
-               BuildableName = "iSHUITests.xctest"
-               BlueprintName = "iSHUITests"
-               ReferencedContainer = "container:iSH.xcodeproj">
+               BlueprintIdentifier = "BB792B4F1F96D90D00FFB7A4"
+               BuildableName = "iSH.app"
+               BlueprintName = "iSH-AOK"
+               ReferencedContainer = "container:iSH-AOK.xcodeproj">
             </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
-            <TestPlanReference
-               reference = "container:app/UITests/Screenshots.xctestplan">
-            </TestPlanReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
@@ -37,36 +27,30 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <TestPlans>
-         <TestPlanReference
-            reference = "container:app/UITests/Screenshots.xctestplan"
-            default = "YES">
-         </TestPlanReference>
-      </TestPlans>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "BB792B4F1F96D90D00FFB7A4"
+            BuildableName = "iSH.app"
+            BlueprintName = "iSH-AOK"
+            ReferencedContainer = "container:iSH-AOK.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "BB41591B255EF9E300E0950C"
-               BuildableName = "iSHUITests.xctest"
-               BlueprintName = "iSHUITests"
-               ReferencedContainer = "container:iSH.xcodeproj">
+               BuildableName = "iSH-AOKUITests.xctest"
+               BlueprintName = "iSH-AOKUITests"
+               ReferencedContainer = "container:iSH-AOK.xcodeproj">
             </BuildableReference>
-            <SelectedTests>
+            <SkippedTests>
                <Test
-                  Identifier = "Screenshots/testEmacs">
+                  Identifier = "Screenshots">
                </Test>
-               <Test
-                  Identifier = "Screenshots/testExample">
-               </Test>
-               <Test
-                  Identifier = "Screenshots/testTakeScreenshots">
-               </Test>
-               <Test
-                  Identifier = "Screenshots/testUname">
-               </Test>
-            </SelectedTests>
+            </SkippedTests>
          </TestableReference>
       </Testables>
    </TestAction>
@@ -74,34 +58,47 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      enableASanStackUseAfterReturn = "YES"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
+      enableGPUValidationMode = "1"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "BB792B4F1F96D90D00FFB7A4"
+            BuildableName = "iSH.app"
+            BlueprintName = "iSH-AOK"
+            ReferencedContainer = "container:iSH-AOK.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BB41591B255EF9E300E0950C"
-            BuildableName = "iSHUITests.xctest"
-            BlueprintName = "iSHUITests"
-            ReferencedContainer = "container:iSH.xcodeproj">
+            BlueprintIdentifier = "BB792B4F1F96D90D00FFB7A4"
+            BuildableName = "iSH.app"
+            BlueprintName = "iSH-AOK"
+            ReferencedContainer = "container:iSH-AOK.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
