Automate daily testflight builds
:pray:

--- a/.github/workflows/upload-build.yml
+++ b/.github/workflows/upload-build.yml
@@ -2,6 +2,8 @@ name: Upload Build
 
 on:
   workflow_dispatch:
+  schedule:
+    - cron: "0 6 * * *"
 
 jobs:
   upload-build:
@@ -14,13 +16,13 @@ jobs:
 
       - name: Install deps
         run: |
-            pip3 install meson
-            brew install ninja
-            bundle install
-            git config user.name github-actions
-            git config user.email github-actions@github.cog
-            cd deps/aports
-            ./download-repos.py
+          pip3 install meson
+          brew install ninja
+          bundle install
+          git config user.name github-actions
+          git config user.email github-actions@github.cog
+          cd deps/aports
+          ./download-repos.py
 
       - name: Fastlane
         timeout-minutes: 720
@@ -44,14 +46,8 @@ jobs:
             iSH-appstore.app.dSYM.zip
 
       - uses: actions/upload-artifact@v2
-        if: ${{ always() }}
+        if: always()
         with:
           name: Fastlane Logs
           path: fastlane.log
-
-      - name: Delete changelog
-        run: |
-          git rm fastlane/changelog.txt
-          git commit -m "Make sure a new changelog is written for the next build"
-          git push
 
