--- a/.github/workflows/upload-build.yml
+++ b/.github/workflows/upload-build.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-          depth: 0
+          fetch-depth: 0
 
       - name: Install deps
         run: |
