--- a/.github/workflows/update-alpine-repo.yml
+++ b/.github/workflows/update-alpine-repo.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   update:
+    if: github.repository == 'ish-app/ish'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
