--- a/.github/workflows/upload-build.yml
+++ b/.github/workflows/upload-build.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   upload-build:
+    if: github.repository == 'ish-app/ish'
     runs-on: macos-10.15
     timeout-minutes: 720
     steps:
