--- a/.github/workflows/update-alpine-repo.yml
+++ b/.github/workflows/update-alpine-repo.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Commit
         id: commit
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name github-actions[bot]
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git add deps/aports/{main,community}/x86/index.txt
           git commit -m "Update Alpine repositories"
           # TODO add a summary of changes in the commit description
