--- a/.github/workflows/upload-build.yml
+++ b/.github/workflows/upload-build.yml
@@ -21,8 +21,8 @@ jobs:
           pip3 install meson
           brew install ninja
           bundle install
-          git config user.name github-actions
-          git config user.email github-actions@github.cog
+          git config user.name github-actions[bot]
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
 
       - name: Fastlane
         timeout-minutes: 720
