Temporarily disable scheduled actions
Needs some manual testing.

--- a/.github/workflows/upload-build.yml
+++ b/.github/workflows/upload-build.yml
@@ -3,7 +3,7 @@ name: Upload Build
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 6 * * *"
+      #- cron: "0 6 * * *"
 
 jobs:
   upload-build:
