Reenable update-alpine-repo, it seems to be successfully uploading to Wasabi

--- a/.github/workflows/update-alpine-repo.yml
+++ b/.github/workflows/update-alpine-repo.yml
@@ -1,8 +1,8 @@
 name: "Update Repo"
 on:
   workflow_dispatch:
-      #schedule:
-      #- cron: "0 0 * * *"
+  schedule:
+    - cron: "0 0 * * *"
 
 jobs:
   update:
