Reenable scheduled build uploads
Seems to be working!

--- a/.github/workflows/upload-build.yml
+++ b/.github/workflows/upload-build.yml
@@ -2,8 +2,8 @@ name: Upload Build
 
 on:
   workflow_dispatch:
-      #schedule:
-      #- cron: "0 6 * * *"
+  schedule:
+    - cron: "0 6 * * *"
 
 jobs:
   upload-build:
