--- a/app/iSH.xcconfig
+++ b/app/iSH.xcconfig
@@ -1,5 +1,7 @@
 // Change this to change all the bundle IDs and app groups
 ROOT_BUNDLE_IDENTIFIER = app.ish.iSH
+// Change this to your Development Team ID (format is /[A-Z0-9]{10}/)
+ISH_DEVELOPMENT_TEAM = CK5SXRTBR7
 
 // Choose logging channels to enable. Separate by spaces. Try "verbose strace".
 ISH_LOG =
