--- a/ish-AOK.xcodeproj/xcshareddata/xcschemes/iSH.xcscheme
+++ b/ish-AOK.xcodeproj/xcshareddata/xcschemes/iSH.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1230"
+   LastUpgradeVersion = "1240"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "497F6D46254E605F00C82F46"
-               BuildableName = "ish"
-               BlueprintName = "ish"
-               ReferencedContainer = "container:iSH-AOK.xcodeproj">
+               BlueprintIdentifier = "BB792B4F1F96D90D00FFB7A4"
+               BuildableName = "iSH-AOK.app"
+               BlueprintName = "iSH-AOK"
+               ReferencedContainer = "container:SEARCH_PATH.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -27,32 +27,58 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "BB792B4F1F96D90D00FFB7A4"
+            BuildableName = "iSH-AOK.app"
+            BlueprintName = "iSH-AOK"
+            ReferencedContainer = "container:SEARCH_PATH.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BB41591B255EF9E300E0950C"
+               BuildableName = "iSH-AOKUITests.xctest"
+               BlueprintName = "iSH-AOKUITests"
+               ReferencedContainer = "container:SEARCH_PATH.xcodeproj">
+            </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "Screenshots">
+               </Test>
+            </SkippedTests>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      enableASanStackUseAfterReturn = "YES"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
+      enableGPUValidationMode = "1"
       allowLocationSimulation = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "497F6D46254E605F00C82F46"
-            BuildableName = "ish"
-            BlueprintName = "ish"
-            ReferencedContainer = "container:iSH-AOK.xcodeproj">
+            BlueprintIdentifier = "BB792B4F1F96D90D00FFB7A4"
+            BuildableName = "iSH-AOK.app"
+            BlueprintName = "iSH-AOK"
+            ReferencedContainer = "container:SEARCH_PATH.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
@@ -61,10 +87,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "497F6D46254E605F00C82F46"
-            BuildableName = "ish"
-            BlueprintName = "ish"
-            ReferencedContainer = "container:iSH-AOK.xcodeproj">
+            BlueprintIdentifier = "BB792B4F1F96D90D00FFB7A4"
+            BuildableName = "iSH-AOK.app"
+            BlueprintName = "iSH-AOK"
+            ReferencedContainer = "container:SEARCH_PATH.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
@@ -72,7 +98,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
