--- a/ish-AOK.xcodeproj/xcshareddata/xcschemes/Screenshots.xcscheme
+++ b/ish-AOK.xcodeproj/xcshareddata/xcschemes/Screenshots.xcscheme
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "BB41591B255EF9E300E0950C"
                BuildableName = "iSH-AOKUITests.xctest"
                BlueprintName = "iSH-AOKUITests"
-               ReferencedContainer = "container:SEARCH_PATH.xcodeproj">
+               ReferencedContainer = "container:ish-AOK.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -51,7 +51,7 @@
                BlueprintIdentifier = "BB41591B255EF9E300E0950C"
                BuildableName = "iSH-AOKUITests.xctest"
                BlueprintName = "iSH-AOKUITests"
-               ReferencedContainer = "container:SEARCH_PATH.xcodeproj">
+               ReferencedContainer = "container:ish-AOK.xcodeproj">
             </BuildableReference>
             <SelectedTests>
                <Test
@@ -93,7 +93,7 @@
             BlueprintIdentifier = "BB41591B255EF9E300E0950C"
             BuildableName = "iSH-AOKUITests.xctest"
             BlueprintName = "iSH-AOKUITests"
-            ReferencedContainer = "container:SEARCH_PATH.xcodeproj">
+            ReferencedContainer = "container:ish-AOK.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
