--- a/ish-AOK.xcodeproj/xcshareddata/xcschemes/ish-cli.xcscheme
+++ b/ish-AOK.xcodeproj/xcshareddata/xcschemes/ish-cli.xcscheme
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "497F6D46254E605F00C82F46"
                BuildableName = "ish"
                BlueprintName = "ish"
-               ReferencedContainer = "container:SEARCH_PATH.xcodeproj">
+               ReferencedContainer = "container:ish-AOK.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -47,7 +47,7 @@
             BlueprintIdentifier = "497F6D46254E605F00C82F46"
             BuildableName = "ish"
             BlueprintName = "ish"
-            ReferencedContainer = "container:SEARCH_PATH.xcodeproj">
+            ReferencedContainer = "container:ish-AOK.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -64,7 +64,7 @@
             BlueprintIdentifier = "497F6D46254E605F00C82F46"
             BuildableName = "ish"
             BlueprintName = "ish"
-            ReferencedContainer = "container:SEARCH_PATH.xcodeproj">
+            ReferencedContainer = "container:ish-AOK.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
