--- a/app/iSH.entitlements
+++ b/app/iSH.entitlements
@@ -5,6 +5,7 @@
 	<key>com.apple.developer.user-fonts</key>
 	<array>
 		<string>app-usage</string>
+		<string>system-installation</string>
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
