Nothing important for now

--- a/ish-AOK.xcodeproj/xcshareddata/xcschemes/Screenshots.xcscheme
+++ b/ish-AOK.xcodeproj/xcshareddata/xcschemes/Screenshots.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1240"
+   LastUpgradeVersion = "1250"
    version = "2.1">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "BB41591B255EF9E300E0950C"
                BuildableName = "iSHUITests.xctest"
                BlueprintName = "iSHUITests"
-               ReferencedContainer = "container:ish-AOK.xcodeproj">
+               ReferencedContainer = "container:iSH-AOK.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -51,7 +51,7 @@
                BlueprintIdentifier = "BB41591B255EF9E300E0950C"
                BuildableName = "iSHUITests.xctest"
                BlueprintName = "iSHUITests"
-               ReferencedContainer = "container:ish-AOK.xcodeproj">
+               ReferencedContainer = "container:iSH-AOK.xcodeproj">
             </BuildableReference>
             <SelectedTests>
                <Test
@@ -93,7 +93,7 @@
             BlueprintIdentifier = "BB41591B255EF9E300E0950C"
             BuildableName = "iSHUITests.xctest"
             BlueprintName = "iSHUITests"
-            ReferencedContainer = "container:ish-AOK.xcodeproj">
+            ReferencedContainer = "container:iSH-AOK.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
