Fixes after adding https://github.com/kmeisthax/ish/tree/unaligned_cmpxchg8b

--- a/meson.build
+++ b/meson.build
@@ -1,25 +1,180 @@
-# The VDSO gets inserted into the address space of emulated processes, so it
-# needs to be compiled as an i386 ELF shared library. This requires a cross
-# compiler and linker on most of the platforms that matter (Mac, 64-bit Linux,
-# Raspberry Pi). Clang and LLD are easy to install on all of these platforms,
-# so that's currently the only supported option (though if you have some other
-# compatible toolchain you can edit this file to point to it instead.)
+project('ish', 'c',
+    default_options: ['default_library=static', 'c_std=gnu11', 'warning_level=2'])
+cc = meson.get_compiler('c')
 
-clang = find_program('/opt/homebrew/opt/llvm/bin/clang', '/usr/local/opt/llvm/bin/clang', '/opt/homebrew/bin/clang', 'clang')
-check_cc = find_program('check-cc.sh')
-result = run_command(check_cc, clang)
-if result.returncode() != 0
-    message('\n' + result.stdout() + result.stderr())
-    if build_machine.system() == 'darwin'
-        install_msg = 'Install LLVM through Homebrew (brew install llvm)'
-    elif build_machine.system() == 'linux'
-        install_msg = 'Install Clang and LLD using your package manager (e.g. sudo apt install clang lld)'
-    endif
-    error('Could not find usable VDSO compiler. ' + install_msg)
+if cc.get_id() == '/opt/homebrew/opt/llvm/bin/clang'
+    add_project_arguments('-Wimplicit-fallthrough', '-Wtautological-constant-in-range-compare', language: 'c')
 endif
-vdso_compiler = [clang, '-target', 'i386-linux', '-fuse-ld=lld']
 
-vdso = custom_target('vdso', input: ['vdso.S', 'vdso.c', 'vdso.lds'], output: 'libvdso.so.elf',
-    command: vdso_compiler + ['-o', '@OUTPUT@', '@INPUT0@', '@INPUT1@',
-        '-nostdlib', '-Wl,-T,@INPUT2@', '-Wl,--hash-style,sysv', '-shared', '-fPIC']
-        + get_option('vdso_c_args').split())
+if get_option('b_sanitize').split(',').contains('undefined')
+    add_project_arguments('-fno-sanitize=alignment', language: 'c')
+endif
+
+log_on = get_option('log').split()
+log_off = get_option('nolog').split()
+foreach channel : log_on + log_off
+    if log_on.contains(channel)
+        add_project_arguments('-DDEBUG_' + channel + '=1', language: 'c')
+    else
+        add_project_arguments('-DDEBUG_' + channel + '=0', language: 'c')
+    endif
+endforeach
+add_project_arguments('-DLOG_HANDLER_' + get_option('log_handler').to_upper() + '=1', language: 'c')
+add_project_arguments('-DENGINE_' + get_option('engine').to_upper() + '=1', language: 'c')
+
+if get_option('no_crlf')
+    add_project_arguments('-DNO_CRLF', language: 'c')
+endif
+
+add_project_arguments('-Wno-switch', language: 'c')
+
+includes = [include_directories('.')]
+
+threads = dependency('threads')
+librt = cc.find_library('rt', required: false)
+libm = cc.find_library('m', required: false)
+sqlite3 = cc.find_library('sqlite3')
+
+dependencies = [librt, libm, threads, sqlite3]
+
+subdir('vdso') # ish depends on the vdso
+
+offsets = custom_target('offsets',
+    output: 'cpu-offsets.h', input: 'jit/offsets.c', depfile: 'cpu-offsets.h.d',
+    command: [find_program('tools/staticdefine.sh'), '@OUTDIR@/compile_commands.json', '@INPUT@', '@OUTPUT@', '@DEPFILE@'])
+
+emu_src = [
+    'emu/tlb.c',
+    'emu/fpu.c',
+    'emu/vec.c',
+    'emu/float80.c',
+
+]
+if get_option('engine') == 'jit'
+    gadgets = 'jit/gadgets-' + host_machine.cpu_family()
+    emu_src += [
+        'jit/jit.c',
+        'jit/gen.c',
+        'jit/helpers.c',
+        gadgets+'/entry.S',
+        gadgets+'/memory.S',
+        gadgets+'/control.S',
+        gadgets+'/math.S',
+        gadgets+'/bits.S',
+        gadgets+'/string.S',
+        gadgets+'/misc.S',
+        offsets,
+    ]
+else
+    emu_src += [
+        'emu/interp.c',
+    ]
+endif
+
+libish_emu = library('ish_emu', emu_src, include_directories: includes)
+
+src = [
+    'kernel/init.c',
+    'kernel/errno.c',
+
+    'kernel/calls.c',
+    'kernel/user.c',
+    'kernel/vdso.c', vdso,
+    'kernel/task.c',
+    'kernel/group.c',
+    'kernel/log.c',
+
+    'kernel/fork.c',
+    'kernel/exec.c',
+    'kernel/exit.c',
+    'kernel/time.c',
+    'kernel/mmap.c',
+    'kernel/uname.c',
+    'kernel/tls.c',
+    'kernel/futex.c',
+    'kernel/getset.c',
+    'kernel/signal.c',
+    'kernel/resource.c',
+    'kernel/random.c',
+    'kernel/misc.c',
+    'kernel/eventfd.c',
+    'kernel/ipc.c',
+    'kernel/ptrace.c',
+
+    'kernel/fs.c',
+    'kernel/fs_info.c',
+    'fs/mount.c',
+    'fs/fd.c',
+    'fs/inode.c',
+    'fs/stat.c',
+    'fs/dir.c',
+    'fs/generic.c',
+    'fs/path.c',
+    'fs/real.c',
+    'fs/fake.c',
+    'fs/fake-migrate.c',
+    'fs/fake-rebuild.c',
+
+    'fs/proc.c',
+    'fs/proc/entry.c',
+    'fs/proc/root.c',
+    'fs/proc/pid.c',
+
+    'fs/dyndev.c',
+
+    'fs/adhoc.c',
+    'fs/sock.c',
+    'fs/pipe.c',
+    'fs/sockrestart.c',
+    'fs/lock.c',
+
+    'fs/dev.c',
+    'fs/mem.c',
+    'fs/tty.c',
+    'fs/tty-real.c',
+    'fs/pty.c',
+    'fs/tmp.c',
+
+    'fs/poll.c',
+    'kernel/poll.c',
+    'kernel/epoll.c',
+
+    'util/timer.c',
+    'util/sync.c',
+    'util/fifo.c',
+
+    'emu/memory.c',
+
+    'platform/' + host_machine.system() + '.c',
+]
+
+libish = library('ish', src,
+    include_directories: includes)
+ish = declare_dependency(
+    link_with: [libish, libish_emu],
+    dependencies: dependencies,
+    include_directories: includes)
+
+# ptraceomatic et al
+subdir('tools')
+
+if not meson.is_cross_build()
+    executable('ish', ['main.c'], dependencies: ish)
+endif
+
+gdb_scripts = ['ish-gdb.gdb']
+foreach script : gdb_scripts
+    custom_target(script,
+        output: script, input: script,
+        command: ['ln', '-sf', '@INPUT@', '@OUTPUT@'],
+        build_by_default: true)
+endforeach
+
+if not meson.is_cross_build()
+    # test for floating point library
+    float80_test = executable('float80_test', ['emu/float80.c', 'emu/float80-test.c'], dependencies: [libm])
+    test('float80', float80_test)
+endif
+
+e2e_test = find_program('tests/e2e/e2e.bash')
+test('e2e', e2e_test, args: ['-y'], timeout: 180)
