--- a/app/FileProvider/iSHFileProvider.entitlements
+++ b/app/FileProvider/iSHFileProvider.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>$(PRODUCT_APP_GROUP_IDENTIFIER)</string>
+		<string>group.corban.ISH</string>
 	</array>
 </dict>
 </plist>
