Try to fix the Linux CI
This has apparently been broken for a while. I think it's just failing
because it doesn't have the latest package indexes and the old ones
point to URLs that now 404.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
             python-version: '3.x'
       - name: Install dependencies
         run: |
+          sudo apt-get update
           sudo apt-get install ninja-build libarchive-dev
           pip3 install meson
       - name: Build
