You can now import exported themes!
Yeah so you can now *unsafely* import themes. There are quite a few checks to put into place but it does work for now. Next commit will change color properties from formatted UIColors to Hex colors. This is very WIP rn but hey, I'm proud of it.

--- a/app/Info.plist
+++ b/app/Info.plist
@@ -4,6 +4,21 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeIconFile</key>
+			<string>icon.png</string>
+			<key>CFBundleTypeName</key>
+			<string>$(PRODUCT_BUNDLE_IDENTIFIER).theme</string>
+			<key>LSHandlerRank</key>
+			<string>Default</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>public.source-code</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
